[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/screens/screen.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/screens/settings_menu.gd" type="Script" id=2]

[node name="SettingsMenu" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Title" parent="." index="0"]
text = "Settings"

[node name="Menu" parent="." index="1"]
margin_left = -130.0
margin_top = -36.0
margin_right = 130.0
margin_bottom = 36.0

[node name="Music" type="HBoxContainer" parent="Menu" index="0"]
margin_right = 260.0
margin_bottom = 20.0
custom_constants/separation = 8

[node name="Label" type="Label" parent="Menu/Music" index="0"]
margin_right = 126.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Music:"

[node name="MusicSlider" type="HSlider" parent="Menu/Music" index="1"]
margin_left = 134.0
margin_right = 260.0
margin_bottom = 8.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.1
value = 1.0
tick_count = 11
ticks_on_borders = true

[node name="SFX" type="HBoxContainer" parent="Menu" index="1"]
margin_top = 24.0
margin_right = 260.0
margin_bottom = 44.0
custom_constants/separation = 8

[node name="Label" type="Label" parent="Menu/SFX" index="0"]
margin_right = 126.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "Sound Effects:"

[node name="SFXSlider" type="HSlider" parent="Menu/SFX" index="1"]
margin_left = 134.0
margin_right = 260.0
margin_bottom = 8.0
size_flags_horizontal = 3
max_value = 1.0
step = 0.1
value = 1.0
tick_count = 11
ticks_on_borders = true

[node name="FinishButtons" type="HBoxContainer" parent="Menu" index="2"]
margin_top = 48.0
margin_right = 260.0
margin_bottom = 72.0

[node name="SaveButton" type="Button" parent="Menu/FinishButtons" index="0"]
margin_right = 129.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Save"

[node name="CancelButton" type="Button" parent="Menu/FinishButtons" index="1"]
margin_left = 130.0
margin_right = 260.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "Cancel"

[connection signal="value_changed" from="Menu/Music/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="Menu/SFX/SFXSlider" to="." method="_on_SFXSlider_value_changed"]
[connection signal="pressed" from="Menu/FinishButtons/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="Menu/FinishButtons/CancelButton" to="." method="_on_CancelButton_pressed"]
